authentik/sources/scim/filters/ScimFilterParser.py
# Generated from /local/ScimFilter.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ScimFilterParser ( Parser ):

    grammarFileName = "ScimFilter.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "' '", "<INVALID>", "<INVALID>", "'\\\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMPAREOPERATOR", "EQ", 
                      "NE", "CO", "SW", "EW", "PR", "GT", "GE", "LT", "LE", 
                      "NOT", "AND", "OR", "SP", "SCHEMA", "ATTRNAME", "ESCAPED_QUOTE", 
                      "VALUE", "EXCLUDE" ]

    RULE_parse = 0
    RULE_filter = 1
    RULE_valPathFilter = 2
    RULE_attrPath = 3

    ruleNames =  [ "parse", "filter", "valPathFilter", "attrPath" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    COMPAREOPERATOR=6
    EQ=7
    NE=8
    CO=9
    SW=10
    EW=11
    PR=12
    GT=13
    GE=14
    LT=15
    LE=16
    NOT=17
    AND=18
    OR=19
    SP=20
    SCHEMA=21
    ATTRNAME=22
    ESCAPED_QUOTE=23
    VALUE=24
    EXCLUDE=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filter_(self):
            return self.getTypedRuleContext(ScimFilterParser.FilterContext,0)


        def getRuleIndex(self):
            return ScimFilterParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = ScimFilterParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.filter_(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScimFilterParser.RULE_filter

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AndExpContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filter_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScimFilterParser.FilterContext)
            else:
                return self.getTypedRuleContext(ScimFilterParser.FilterContext,i)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)
        def AND(self):
            return self.getToken(ScimFilterParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExp" ):
                listener.enterAndExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExp" ):
                listener.exitAndExp(self)


    class ValPathExpContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def attrPath(self):
            return self.getTypedRuleContext(ScimFilterParser.AttrPathContext,0)

        def valPathFilter(self):
            return self.getTypedRuleContext(ScimFilterParser.ValPathFilterContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValPathExp" ):
                listener.enterValPathExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValPathExp" ):
                listener.exitValPathExp(self)


    class PresentExpContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def attrPath(self):
            return self.getTypedRuleContext(ScimFilterParser.AttrPathContext,0)

        def SP(self):
            return self.getToken(ScimFilterParser.SP, 0)
        def PR(self):
            return self.getToken(ScimFilterParser.PR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPresentExp" ):
                listener.enterPresentExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPresentExp" ):
                listener.exitPresentExp(self)


    class OperatorExpContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def attrPath(self):
            return self.getTypedRuleContext(ScimFilterParser.AttrPathContext,0)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)
        def COMPAREOPERATOR(self):
            return self.getToken(ScimFilterParser.COMPAREOPERATOR, 0)
        def VALUE(self):
            return self.getToken(ScimFilterParser.VALUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperatorExp" ):
                listener.enterOperatorExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperatorExp" ):
                listener.exitOperatorExp(self)


    class BraceExpContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filter_(self):
            return self.getTypedRuleContext(ScimFilterParser.FilterContext,0)

        def NOT(self):
            return self.getToken(ScimFilterParser.NOT, 0)
        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBraceExp" ):
                listener.enterBraceExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBraceExp" ):
                listener.exitBraceExp(self)


    class OrExpContext(FilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.FilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filter_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScimFilterParser.FilterContext)
            else:
                return self.getTypedRuleContext(ScimFilterParser.FilterContext,i)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)
        def OR(self):
            return self.getToken(ScimFilterParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExp" ):
                listener.enterOrExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExp" ):
                listener.exitOrExp(self)



    def filter_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ScimFilterParser.FilterContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_filter, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ScimFilterParser.PresentExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 11
                self.attrPath()
                self.state = 12
                self.match(ScimFilterParser.SP)
                self.state = 13
                self.match(ScimFilterParser.PR)
                pass

            elif la_ == 2:
                localctx = ScimFilterParser.OperatorExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 15
                self.attrPath()
                self.state = 16
                self.match(ScimFilterParser.SP)
                self.state = 17
                self.match(ScimFilterParser.COMPAREOPERATOR)
                self.state = 18
                self.match(ScimFilterParser.SP)
                self.state = 19
                self.match(ScimFilterParser.VALUE)
                pass

            elif la_ == 3:
                localctx = ScimFilterParser.BraceExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 21
                    self.match(ScimFilterParser.NOT)


                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 24
                    self.match(ScimFilterParser.SP)
                    self.state = 29
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 30
                self.match(ScimFilterParser.T__0)
                self.state = 31
                self.filter_(0)
                self.state = 32
                self.match(ScimFilterParser.T__1)
                pass

            elif la_ == 4:
                localctx = ScimFilterParser.ValPathExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 34
                self.attrPath()
                self.state = 35
                self.match(ScimFilterParser.T__2)
                self.state = 36
                self.valPathFilter(0)
                self.state = 37
                self.match(ScimFilterParser.T__3)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 53
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 51
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = ScimFilterParser.AndExpContext(self, ScimFilterParser.FilterContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_filter)
                        self.state = 41
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 42
                        self.match(ScimFilterParser.SP)
                        self.state = 43
                        self.match(ScimFilterParser.AND)
                        self.state = 44
                        self.match(ScimFilterParser.SP)
                        self.state = 45
                        self.filter_(3)
                        pass

                    elif la_ == 2:
                        localctx = ScimFilterParser.OrExpContext(self, ScimFilterParser.FilterContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_filter)
                        self.state = 46
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 47
                        self.match(ScimFilterParser.SP)
                        self.state = 48
                        self.match(ScimFilterParser.OR)
                        self.state = 49
                        self.match(ScimFilterParser.SP)
                        self.state = 50
                        self.filter_(2)
                        pass

             
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValPathFilterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScimFilterParser.RULE_valPathFilter

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ValPathOperatorExpContext(ValPathFilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.ValPathFilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def attrPath(self):
            return self.getTypedRuleContext(ScimFilterParser.AttrPathContext,0)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)
        def COMPAREOPERATOR(self):
            return self.getToken(ScimFilterParser.COMPAREOPERATOR, 0)
        def VALUE(self):
            return self.getToken(ScimFilterParser.VALUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValPathOperatorExp" ):
                listener.enterValPathOperatorExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValPathOperatorExp" ):
                listener.exitValPathOperatorExp(self)


    class ValPathPresentExpContext(ValPathFilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.ValPathFilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def attrPath(self):
            return self.getTypedRuleContext(ScimFilterParser.AttrPathContext,0)

        def SP(self):
            return self.getToken(ScimFilterParser.SP, 0)
        def PR(self):
            return self.getToken(ScimFilterParser.PR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValPathPresentExp" ):
                listener.enterValPathPresentExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValPathPresentExp" ):
                listener.exitValPathPresentExp(self)


    class ValPathAndExpContext(ValPathFilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.ValPathFilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def valPathFilter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScimFilterParser.ValPathFilterContext)
            else:
                return self.getTypedRuleContext(ScimFilterParser.ValPathFilterContext,i)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)
        def AND(self):
            return self.getToken(ScimFilterParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValPathAndExp" ):
                listener.enterValPathAndExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValPathAndExp" ):
                listener.exitValPathAndExp(self)


    class ValPathOrExpContext(ValPathFilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.ValPathFilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def valPathFilter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScimFilterParser.ValPathFilterContext)
            else:
                return self.getTypedRuleContext(ScimFilterParser.ValPathFilterContext,i)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)
        def OR(self):
            return self.getToken(ScimFilterParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValPathOrExp" ):
                listener.enterValPathOrExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValPathOrExp" ):
                listener.exitValPathOrExp(self)


    class ValPathBraceExpContext(ValPathFilterContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ScimFilterParser.ValPathFilterContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def valPathFilter(self):
            return self.getTypedRuleContext(ScimFilterParser.ValPathFilterContext,0)

        def NOT(self):
            return self.getToken(ScimFilterParser.NOT, 0)
        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.SP)
            else:
                return self.getToken(ScimFilterParser.SP, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValPathBraceExp" ):
                listener.enterValPathBraceExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValPathBraceExp" ):
                listener.exitValPathBraceExp(self)



    def valPathFilter(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ScimFilterParser.ValPathFilterContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_valPathFilter, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = ScimFilterParser.ValPathPresentExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 57
                self.attrPath()
                self.state = 58
                self.match(ScimFilterParser.SP)
                self.state = 59
                self.match(ScimFilterParser.PR)
                pass

            elif la_ == 2:
                localctx = ScimFilterParser.ValPathOperatorExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 61
                self.attrPath()
                self.state = 62
                self.match(ScimFilterParser.SP)
                self.state = 63
                self.match(ScimFilterParser.COMPAREOPERATOR)
                self.state = 64
                self.match(ScimFilterParser.SP)
                self.state = 65
                self.match(ScimFilterParser.VALUE)
                pass

            elif la_ == 3:
                localctx = ScimFilterParser.ValPathBraceExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 67
                    self.match(ScimFilterParser.NOT)


                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 70
                    self.match(ScimFilterParser.SP)
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 76
                self.match(ScimFilterParser.T__0)
                self.state = 77
                self.valPathFilter(0)
                self.state = 78
                self.match(ScimFilterParser.T__1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 92
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = ScimFilterParser.ValPathAndExpContext(self, ScimFilterParser.ValPathFilterContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_valPathFilter)
                        self.state = 82
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 83
                        self.match(ScimFilterParser.SP)
                        self.state = 84
                        self.match(ScimFilterParser.AND)
                        self.state = 85
                        self.match(ScimFilterParser.SP)
                        self.state = 86
                        self.valPathFilter(3)
                        pass

                    elif la_ == 2:
                        localctx = ScimFilterParser.ValPathOrExpContext(self, ScimFilterParser.ValPathFilterContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_valPathFilter)
                        self.state = 87
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 88
                        self.match(ScimFilterParser.SP)
                        self.state = 89
                        self.match(ScimFilterParser.OR)
                        self.state = 90
                        self.match(ScimFilterParser.SP)
                        self.state = 91
                        self.valPathFilter(2)
                        pass

             
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AttrPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTRNAME(self, i:int=None):
            if i is None:
                return self.getTokens(ScimFilterParser.ATTRNAME)
            else:
                return self.getToken(ScimFilterParser.ATTRNAME, i)

        def SCHEMA(self):
            return self.getToken(ScimFilterParser.SCHEMA, 0)

        def getRuleIndex(self):
            return ScimFilterParser.RULE_attrPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrPath" ):
                listener.enterAttrPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrPath" ):
                listener.exitAttrPath(self)




    def attrPath(self):

        localctx = ScimFilterParser.AttrPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attrPath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 97
                self.match(ScimFilterParser.SCHEMA)


            self.state = 100
            self.match(ScimFilterParser.ATTRNAME)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 101
                self.match(ScimFilterParser.T__4)
                self.state = 102
                self.match(ScimFilterParser.ATTRNAME)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.filter_sempred
        self._predicates[2] = self.valPathFilter_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def filter_sempred(self, localctx:FilterContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 1)
         

    def valPathFilter_sempred(self, localctx:ValPathFilterContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 1)
         




